InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/vlocity_ins__QuoteLineItemRateBreakout__c.object-meta.xml
<CustomObject>
    <description>Represents a detailed breakout of quote line item rates per member or other sub-segment. Holds information identifying the breakout (e.g. identifies the member) and the quoted rate details specific to that segment (e.g. that member&apos;s rates). Master-detail child object of Quote.</description>
    <label>Quoted Plan Rate Breakout</label>
    <nameField>
        <label>Rate Breakout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quoted Plan Rate Breakouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>