InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/fields/vlocity_ins__Age__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Age__c</fullName>
    <formula>vlocity_ins__CensusMemberId__r.vlocity_ins__AgeAsOfToday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>