InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/fields/vlocity_ins__CalcRateProcedureName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CalcRateProcedureName__c</fullName>
    <formula>vlocity_ins__QuoteLineItemId__r.Product2.vlocity_ins__RatingCalcProcedureName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Product Rate Procedure Name</label>
    <type>Text</type>
</CustomField>