InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/fields/vlocity_ins__Gender__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Gender__c</fullName>
    <formula>TEXT(vlocity_ins__CensusMemberId__r.vlocity_ins__Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Gender</label>
    <type>Text</type>
</CustomField>