InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/fields/vlocity_ins__PlanCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PlanCode__c</fullName>
    <formula>vlocity_ins__QuoteLineItemId__r.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoted Product Plan Code</label>
    <type>Text</type>
</CustomField>