InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/fields/vlocity_ins__QuoteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QuoteId__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quoted Rates</relationshipLabel>
    <relationshipName>QuoteLineItemMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>