InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/fields/vlocity_ins__QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quoted Rates</relationshipLabel>
    <relationshipName>Quote_Line_Item_Members</relationshipName>
    <type>Lookup</type>
</CustomField>