InsuranceOrg/force-app/main/default/objects/vlocity_ins__QuoteLineItemRateBreakout__c/fields/vlocity_ins__TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TotalPrice__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>